syntax = "proto3";

option go_package = "github.com/opentelco/go-swpx/proto/dnc";

package dnc;


message Payload {
  string hostname = 1;
  string password = 2;
}

message LookupResponse {
  string origin_id = 1;
}

message LookupRequest {
  string origin_id = 1;
}

